--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -106,8 +106,8 @@
                         <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="{Binding CredName, UpdateSourceTrigger=PropertyChanged}"/>
-                    <TextBox Grid.Column="1" Text="{Binding CredValue, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Label Grid.Column="0" Content="{Binding CredentialName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Grid.Column="1" Text="{Binding CredentialValue, UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
             </DataTemplate>
 
@@ -117,7 +117,7 @@
                         <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="{Binding CredName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Label Grid.Column="0" Content="{Binding CredentialName, UpdateSourceTrigger=PropertyChanged}"/>
                     <PasswordBox Grid.Column="1" PasswordChanged="PasswordBox_PasswordChanged" Loaded="PasswordBox_Loaded" />
                 </Grid>
             </DataTemplate>
@@ -128,8 +128,8 @@
                         <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="{Binding CredName, UpdateSourceTrigger=PropertyChanged}"/>
-                    <TextBox Grid.Column="1" Text="{Binding CredValue, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Label Grid.Column="0" Content="{Binding CredentialName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Grid.Column="1" Text="{Binding CredentialValue, UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
             </DataTemplate>
 
@@ -139,8 +139,8 @@
                         <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="{Binding CredName, UpdateSourceTrigger=PropertyChanged}"/>
-                    <TextBox Grid.Column="1" Text="{Binding CredValue, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Label Grid.Column="0" Content="{Binding CredentialName, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Grid.Column="1" Text="{Binding CredentialValue, UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
             </DataTemplate>
         </ResourceDictionary>
