(TH-166) Added 'Remove provider' button and implemented command for it, changed look of add and remove buttons and refactoring existing relay commands

--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -98,6 +98,7 @@
             </Style>
 
             <conv:ProviderConnectionStatusToBrushConverter x:Key="ConnectionStatusToBrush"/>
+            <conv:SelectedProviderToVisibilityConverter x:Key="SelectedProviderToVisibility"/>
             <templateSelector:CredentialsTemplateSelector x:Key="CredentialsTemplateSelector"/>
 
             <DataTemplate x:Key="UsernameDataTemplate">
@@ -169,16 +170,25 @@
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Content="Provider"/>
                             <ComboBox Grid.Column="1" Name="MarketDataProvidersComboBox" SelectedItem="{Binding SelectedMarketDataProvider}"
-                                      ItemsSource="{Binding MarketDataProviders}" DisplayMemberPath="ProviderName"/>
+                                      ItemsSource="{Binding MarketDataProviders}" DisplayMemberPath="ProviderName" FontWeight="Bold"/>
                         </Grid>
-                        
-                        <Button Grid.Column="1" Content="Add new provider" Margin="20,0,0,0" Command="{Binding AddMarketDataProviderCommand}"/>
-                        
+
+                        <StackPanel Grid.Column="1" Orientation="Horizontal">
+                            <Button ToolTip="Add new provider" Margin="20,0,0,0" Padding="0" Width="24"
+                                    Command="{Binding AddProviderCommand}" CommandParameter="MarketDataProvider">
+                                <Image Width="13" Height="13" Source="{StaticResource imgFolder}" UseLayoutRounding="True"/>
+                            </Button>
+                            <Button ToolTip="Remove provider" Margin="2,0,0,0" Padding="0" Width="24"
+                                    Command="{Binding RemoveProviderCommand}" CommandParameter="MarketDataProvider">
+                                <Image Width="11" Height="11" Source="{StaticResource imgRemove}" UseLayoutRounding="True"/>
+                            </Button>
+                        </StackPanel>
+
                         <ItemsControl Grid.Row="1" Margin="0,20,0,0"
                                       ItemsSource="{Binding SelectedItem.ProviderCredentials, ElementName=MarketDataProvidersComboBox}"
                                       ItemTemplateSelector="{StaticResource CredentialsTemplateSelector}" />
 
-                        <Grid Grid.Row="2" Margin="0,20,0,0">
+                        <Grid Grid.Row="2" Margin="0,20,0,0" Visibility="{Binding SelectedMarketDataProvider, Converter={StaticResource SelectedProviderToVisibility}}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
                                 <ColumnDefinition />
@@ -191,9 +201,10 @@
                             </Border>
                         </Grid>
 
-                        <StackPanel Grid.Row="3" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,20,0,0" HorizontalAlignment="Left">
-                            <Button Content="Connect" Margin="4" MinWidth="80" Command="{Binding ConnectMarketDataProviderCommand}"/>
-                            <Button Content="Disconnect" Margin="4" MinWidth="80" Command="{Binding DisconnectMarketDataProviderCommand}"/>
+                        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="100,10,0,0" HorizontalAlignment="Left" 
+                                    Visibility="{Binding SelectedMarketDataProvider, Converter={StaticResource SelectedProviderToVisibility}}">
+                            <Button Content="Connect" Margin="4" MinWidth="80" Command="{Binding ConnectProviderCommand}" CommandParameter="MarketDataProvider"/>
+                            <Button Content="Disconnect" Margin="4" MinWidth="80" Command="{Binding DisconnectProviderCommand}" CommandParameter="MarketDataProvider"/>
                         </StackPanel>
                     </Grid>
                 </Grid>
@@ -220,16 +231,25 @@
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Content="Provider"/>
                             <ComboBox Grid.Column="1" Name="OrderExecutionProvidersComboBox" SelectedItem="{Binding SelectedOrderExecutionProvider}"
-                                      ItemsSource="{Binding OrderExecutionProviders}" DisplayMemberPath="ProviderName"/>
+                                      ItemsSource="{Binding OrderExecutionProviders}" DisplayMemberPath="ProviderName" FontWeight="Bold"/>
                         </Grid>
 
-                        <Button Grid.Column="1" Content="Add new provider" Margin="20,0,0,0" Command="{Binding AddOrderExecutionProviderCommand}"/>
+                        <StackPanel Grid.Column="1" Orientation="Horizontal">
+                            <Button ToolTip="Add new provider" Margin="20,0,0,0" Padding="0" Width="24"
+                                    Command="{Binding AddProviderCommand}" CommandParameter="OrderExecutionProvider">
+                                <Image Width="13" Height="13" Source="{StaticResource imgFolder}" UseLayoutRounding="True"/>
+                            </Button>
+                            <Button ToolTip="Remove provider" Margin="2,0,0,0" Padding="0" Width="24"
+                                    Command="{Binding RemoveProviderCommand}" CommandParameter="OrderExecutionProvider">
+                                <Image Width="11" Height="11" Source="{StaticResource imgRemove}" UseLayoutRounding="True"/>
+                            </Button>
+                        </StackPanel>
 
                         <ItemsControl Grid.Row="1" Margin="0,20,0,0"
                                       ItemsSource="{Binding SelectedItem.ProviderCredentials, ElementName=OrderExecutionProvidersComboBox}"
                                       ItemTemplateSelector="{StaticResource CredentialsTemplateSelector}" />
 
-                        <Grid Grid.Row="2" Margin="0,20,0,0">
+                        <Grid Grid.Row="2" Margin="0,20,0,0" Visibility="{Binding SelectedOrderExecutionProvider, Converter={StaticResource SelectedProviderToVisibility}}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" SharedSizeGroup="lblGroup"/>
                                 <ColumnDefinition />
@@ -242,9 +262,10 @@
                             </Border>
                         </Grid>
 
-                        <StackPanel Grid.Row="3" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,20,0,0" HorizontalAlignment="Left">
-                            <Button Content="Connect" Margin="4" MinWidth="80" Command="{Binding ConnectOrderExecutionProviderCommand}"/>
-                            <Button Content="Disconnect" Margin="4" MinWidth="80" Command="{Binding DisconnectOrderExecutionProviderCommand}"/>
+                        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="100,10,0,0" HorizontalAlignment="Left" 
+                                    Visibility="{Binding SelectedOrderExecutionProvider, Converter={StaticResource SelectedProviderToVisibility}}">
+                            <Button Content="Connect" Margin="4" MinWidth="80" Command="{Binding ConnectProviderCommand}" CommandParameter="OrderExecutionProvider"/>
+                            <Button Content="Disconnect" Margin="4" MinWidth="80" Command="{Binding DisconnectProviderCommand}" CommandParameter="OrderExecutionProvider"/>
                         </StackPanel>
                     </Grid>
                 </Grid>
