(TH-168) Added code to Subscribe market data. Added code to connect provider from UI.

--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -17,7 +17,7 @@
                  GlowBrush="{StaticResource BaseBrush0}"
                  FontFamily="{StaticResource DefaultFont}"
                  FontSize="{StaticResource NormalFontSize}"
-                 Icon="{StaticResource imgHub}">
+                 Icon="{StaticResource imgHub}" Closing="OnApplicationClose">
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
             <Image Height="20" Width="20" Source="{StaticResource imgHub}"/>
