--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -271,6 +271,98 @@
                 </Grid>
             </mah:Flyout>
 
+            <mah:Flyout Header="Services Configuration" Position="Right" Theme="Adapt" IsModal="True">
+                <Grid Margin="20" Width="400" Grid.IsSharedSizeScope="True">
+                    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="0,20,0,0">
+                        <ItemsControl Margin="10,0" Width="380" HorizontalAlignment="Left" UseLayoutRounding="True">
+                            <GroupBox Header="Market Data Service" Padding="0,0,8,2" Margin="0,0,0,4">
+                                <DockPanel>
+                                    <CheckBox DockPanel.Dock="Right" Content="Enabled" Margin="10,0,10,0" VerticalAlignment="Center"/>
+                                    <Button DockPanel.Dock="Right" MinWidth="60" Focusable="False">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
+                                            <TextBlock Text="Stop"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Button DockPanel.Dock="Right" MinWidth="60" IsEnabled="False" Focusable="False">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
+                                            <TextBlock Text="Start"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Border VerticalAlignment="Center" Padding="10,1,8,2" Background="Transparent" HorizontalAlignment="Left">
+                                        <TextBlock Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" FontSize="14" Margin="0,0,0,0"/>
+                                    </Border>
+                                </DockPanel>
+                            </GroupBox>
+
+                            <GroupBox Header="Order Execution Service" Padding="0,0,8,2" Margin="0,0,0,4">
+                                <DockPanel>
+                                    <CheckBox DockPanel.Dock="Right" Content="Enabled" Margin="10,0,10,0" VerticalAlignment="Center"/>
+                                    <Button DockPanel.Dock="Right" MinWidth="60" Focusable="False">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
+                                            <TextBlock Text="Stop"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Button DockPanel.Dock="Right"  MinWidth="60" IsEnabled="False" Focusable="False">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
+                                            <TextBlock Text="Start"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Border VerticalAlignment="Center" Padding="10,1,8,2" Background="Transparent" HorizontalAlignment="Left">
+                                        <TextBlock Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" FontSize="14" Margin="0,0,0,0"/>
+                                    </Border>
+                                </DockPanel>
+                            </GroupBox>
+
+                            <GroupBox Header="Position Engine Service" Padding="0,0,8,2" Margin="0,0,0,4">
+                                <DockPanel>
+                                    <CheckBox DockPanel.Dock="Right" Content="Enabled" Margin="10,0,10,0" VerticalAlignment="Center"/>
+                                    <Button DockPanel.Dock="Right" MinWidth="60" Focusable="False">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
+                                            <TextBlock Text="Stop"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Button DockPanel.Dock="Right"  MinWidth="60" IsEnabled="False" Focusable="False">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
+                                            <TextBlock Text="Start"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Border VerticalAlignment="Center" Padding="10,1,8,2" Background="Transparent" HorizontalAlignment="Left">
+                                        <TextBlock Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" FontSize="14" Margin="0,0,0,0"/>
+                                    </Border>
+                                </DockPanel>
+                            </GroupBox>
+
+                            <GroupBox Header="Reporting Engine Service" Padding="0,0,8,2" Margin="0,0,0,4">
+                                <DockPanel>
+                                    <CheckBox DockPanel.Dock="Right" Content="Enabled" Margin="10,0,10,0" VerticalAlignment="Center"/>
+                                    <Button DockPanel.Dock="Right" MinWidth="60" IsEnabled="False" Focusable="False">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
+                                            <TextBlock Text="Stop"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Button DockPanel.Dock="Right"  MinWidth="60" IsEnabled="True" Focusable="False">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
+                                            <TextBlock Text="Start"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Border VerticalAlignment="Center" Padding="10,1,8,2" Background="Transparent" HorizontalAlignment="Left">
+                                        <TextBlock Text="Stopped" Foreground="{StaticResource RedBrush}" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" FontSize="14" Margin="0,0,0,0"/>
+                                    </Border>
+                                </DockPanel>
+                            </GroupBox>
+                        </ItemsControl>
+                    </ScrollViewer>
+                </Grid>
+            </mah:Flyout>
+
             <mah:Flyout Header="" Position="Bottom" Theme="Adapt" IsModal="False" Background="#DFEEEEEE">
                 <Grid Height="150">
                     <DockPanel Margin="-20,0,0,0">
