--- a/Resources/Resources/Styles/WPFToolkit/DataGrid.xaml
+++ b/Resources/Resources/Styles/WPFToolkit/DataGrid.xaml
@@ -480,7 +480,7 @@
 	<!-- Default DataGridCell Style -->
 	<Style x:Key="DefaultCellStyle" TargetType="{x:Type DataGridCell}" >
 		<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-		<Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource AncestorType=DataGrid}}"/>
+        <Setter Property="Foreground" Value="{StaticResource DataGridForegroundBrush}"/>
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type DataGridCell}">
@@ -510,7 +510,7 @@
 	<!-- Right Aligned DataGridCell Style -->
 	<Style x:Key="RightAlignedCellStyle" TargetType="{x:Type DataGridCell}" >
 		<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-		<Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource AncestorType=DataGrid}}"/>
+        <Setter Property="Foreground" Value="{StaticResource DataGridForegroundBrush}"/>
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type DataGridCell}">
@@ -538,7 +538,7 @@
 
 	<Style x:Key="DataGridCellStyleIsValid" TargetType="{x:Type DataGridCell}" >
 		<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-		<Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource AncestorType=DataGrid}}"/>
+        <Setter Property="Foreground" Value="{StaticResource DataGridForegroundBrush}"/>
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type DataGridCell}">
