--- a/TradeHubGui/Views/DashboardView.xaml
+++ b/TradeHubGui/Views/DashboardView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1200"
              Tag="DASHBOARD">
-    
+
     <UserControl.Resources>
         <conv:ProviderConnectionStatusToBrushConverter x:Key="ConnectionStatusToBrush"/>
     </UserControl.Resources>
@@ -65,25 +65,7 @@
                     <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="LOG" Style="{StaticResource HeaderTextBlockStyle}"/>
 
                     <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0,20,0,0">
-                        <ItemsControl Margin="2">
-                            <ItemsControl.Resources>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="Margin" Value="0"/>
-                                    <Setter Property="FontFamily" Value="Consolas"/>
-                                    <Setter Property="FontSize" Value="11"/>
-                                </Style>
-                            </ItemsControl.Resources>
-                            <TextBlock>> MDE Started Successfully</TextBlock>
-                            <TextBlock>> OEE Started Successfully</TextBlock>
-                            <TextBlock>> PE Failed.</TextBlock>
-                            <TextBlock></TextBlock>
-                            <TextBlock>> Blackwood Connected.</TextBlock>
-                            <TextBlock>> Subscribing AAPL.</TextBlock>
-                            <TextBlock></TextBlock>
-                            <TextBlock>> MDE Started Successfully</TextBlock>
-                            <TextBlock>> OEE Started Successfully</TextBlock>
-                            <TextBlock>> PE Failed.</TextBlock>
-                        </ItemsControl>
+                       
                     </ScrollViewer>
                 </DockPanel>
             </Grid>-->
@@ -112,7 +94,7 @@
                             <Button ToolTip="Data API Configuration" Style="{StaticResource ToolBarButtonStyle}" Content="{StaticResource imgSettings}" 
                                     Width="22" Height="22" HorizontalAlignment="Right" VerticalAlignment="Top" BorderThickness="1"
                                     Command="{Binding ShowDataApiConfigurationCommand}"/>
-                            <HeaderedContentControl Header="MARKET DATA PROVIDERS" Margin="0,2,14,0">
+                            <HeaderedContentControl Header="Market Data Providers" Margin="0,2,14,0">
                                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                                     <ItemsControl Margin="2" ItemsSource="{Binding MarketDataProviders}">
                                         <ItemsControl.ItemTemplate>
@@ -131,7 +113,7 @@
                             <Button ToolTip="Order API Configuration" Style="{StaticResource ToolBarButtonStyle}" Content="{StaticResource imgSettings}" 
                                     Width="22" Height="22" HorizontalAlignment="Right" VerticalAlignment="Top" BorderThickness="1"
                                     Command="{Binding ShowOrderApiConfigurationCommand}"/>
-                            <HeaderedContentControl Header="ORDER EXECUTION PROVIDERS" Margin="0,2,14,0">
+                            <HeaderedContentControl Header="Order Execution Providers" Margin="0,2,14,0">
                                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                                     <ItemsControl Margin="2" ItemsSource="{Binding OrderExecutionProviders}">
                                         <ItemsControl.ItemTemplate>
@@ -155,89 +137,59 @@
             <Grid Grid.Row="2" Margin="5,5,20,20">
                 <Border Style="{StaticResource ContentBorderStyle}"/>
                 <DockPanel Margin="10">
-                    <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="SERVICES" Style="{StaticResource HeaderTextBlockStyle}"/>
+                    <DockPanel DockPanel.Dock="Top">
+                        <Button DockPanel.Dock="Right" ToolTip="Services Configuration" Style="{StaticResource ToolBarButtonStyle}" Content="{StaticResource imgSettings}" 
+                                    Width="22" Height="22" HorizontalAlignment="Right" VerticalAlignment="Center" BorderThickness="1"
+                                    Command="{Binding ShowServicesConfigurationCommand}" Margin="0,0,10,0"/>
+                        <TextBlock Margin="10,0" Text="SERVICES" Style="{StaticResource HeaderTextBlockStyle}"/>
+                    </DockPanel>
 
                     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="0,20,0,0">
                         <ItemsControl Margin="10,0" Width="310" HorizontalAlignment="Left" UseLayoutRounding="True">
-                            <GroupBox Header="Market Data Service" Padding="0,0,8,2" Margin="0,0,0,4" BorderThickness="4,0,0,0" BorderBrush="{StaticResource GreenBrush}" Background="WhiteSmoke">
-                                <DockPanel>
-                                    <Button DockPanel.Dock="Right" MinWidth="60" Focusable="False">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
-                                            <TextBlock Text="Stop"/>
-                                        </StackPanel>
-                                    </Button>
-                                    <Button DockPanel.Dock="Right" MinWidth="60" IsEnabled="False" Focusable="False">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
-                                            <TextBlock Text="Start"/>
-                                        </StackPanel>
-                                    </Button>
-                                    <Border VerticalAlignment="Center" Padding="10,1,8,2" Background="Transparent" HorizontalAlignment="Left">
-                                        <TextBlock Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,0"/>
-                                    </Border>
-                                </DockPanel>
-                            </GroupBox>
 
-                            <GroupBox Header="Order Execution Service" Padding="0,0,8,2" Margin="0,0,0,4" BorderThickness="4,0,0,0" BorderBrush="{StaticResource GreenBrush}" Background="WhiteSmoke">
-                                <DockPanel>
-                                    <Button DockPanel.Dock="Right" MinWidth="60" Focusable="False">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
-                                            <TextBlock Text="Stop"/>
-                                        </StackPanel>
-                                    </Button>
-                                    <Button DockPanel.Dock="Right"  MinWidth="60" IsEnabled="False" Focusable="False">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
-                                            <TextBlock Text="Start"/>
-                                        </StackPanel>
-                                    </Button>
-                                    <Border VerticalAlignment="Center" Padding="10,1,8,2" Background="Transparent" HorizontalAlignment="Left">
-                                        <TextBlock Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,0"/>
-                                    </Border>
-                                </DockPanel>
-                            </GroupBox>
+                            <Grid>
+                                <Border Margin="0,4" Background="WhiteSmoke" BorderBrush="{StaticResource GreenBrush}" BorderThickness="4,0,0,0" CornerRadius="0,0,30,0" VerticalAlignment="Center">
+                                    <DockPanel Margin="8,4,4,6">
+                                        <TextBlock DockPanel.Dock="Left" Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps"
+                                               VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Width="60"/>
+                                        <TextBlock Text="Market Data Service" Margin="40,0,0,0" VerticalAlignment="Center" FontSize="12" Typography.Capitals="Normal" FontWeight="Normal"/>
+                                    </DockPanel>
+                                </Border>
+                                <Border Margin="0,4" Width="2" Height="14" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            </Grid>
 
-                            <GroupBox Header="Position Engine Service" Padding="0,0,8,2" Margin="0,0,0,4" BorderThickness="4,0,0,0" BorderBrush="{StaticResource GreenBrush}" Background="WhiteSmoke">
-                                <DockPanel>
-                                    <Button DockPanel.Dock="Right" MinWidth="60" Focusable="False">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
-                                            <TextBlock Text="Stop"/>
-                                        </StackPanel>
-                                    </Button>
-                                    <Button DockPanel.Dock="Right"  MinWidth="60" IsEnabled="False" Focusable="False">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
-                                            <TextBlock Text="Start"/>
-                                        </StackPanel>
-                                    </Button>
-                                    <Border VerticalAlignment="Center" Padding="10,1,8,2" Background="Transparent" HorizontalAlignment="Left">
-                                        <TextBlock Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,0"/>
-                                    </Border>
-                                </DockPanel>
-                            </GroupBox>
+                            <Grid>
+                                <Border Margin="0,4" Background="WhiteSmoke" BorderBrush="{StaticResource GreenBrush}" BorderThickness="4,0,0,0" CornerRadius="0,0,30,0" VerticalAlignment="Center">
+                                    <DockPanel Margin="8,4,4,6">
+                                        <TextBlock DockPanel.Dock="Left" Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps"
+                                               VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Width="60"/>
+                                        <TextBlock Text="Order Execution Service" Margin="40,0,0,0" VerticalAlignment="Center" FontSize="12" Typography.Capitals="Normal" FontWeight="Normal"/>
+                                    </DockPanel>
+                                </Border>
+                                <Border Margin="0,4" Width="2" Height="14" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            </Grid>
 
-                            <GroupBox Header="Reporting Engine Service" Padding="0,0,8,2" Margin="0,0,0,4" BorderThickness="4,0,0,0" BorderBrush="{StaticResource RedBrush}" Background="WhiteSmoke">
-                                <DockPanel>
-                                    <Button DockPanel.Dock="Right" MinWidth="60" IsEnabled="False" Focusable="False">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
-                                            <TextBlock Text="Stop"/>
-                                        </StackPanel>
-                                    </Button>
-                                    <Button DockPanel.Dock="Right"  MinWidth="60" IsEnabled="True" Focusable="False">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
-                                            <TextBlock Text="Start"/>
-                                        </StackPanel>
-                                    </Button>
-                                    <Border VerticalAlignment="Center" Padding="10,1,8,2" Background="Transparent" HorizontalAlignment="Left">
-                                        <TextBlock Text="Stopped" Foreground="{StaticResource RedBrush}" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,0"/>
-                                    </Border>
-                                </DockPanel>
-                            </GroupBox>
+                            <Grid>
+                                <Border Margin="0,4" Background="WhiteSmoke" BorderBrush="{StaticResource GreenBrush}" BorderThickness="4,0,0,0" CornerRadius="0,0,30,0" VerticalAlignment="Center">
+                                    <DockPanel Margin="8,4,4,6">
+                                        <TextBlock DockPanel.Dock="Left" Text="Running" Foreground="{StaticResource GreenBrush}" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps"
+                                               VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Width="60"/>
+                                        <TextBlock Text="Position Engine Service" Margin="40,0,0,0" VerticalAlignment="Center" FontSize="12" Typography.Capitals="Normal" FontWeight="Normal"/>
+                                    </DockPanel>
+                                </Border>
+                                <Border Margin="0,4" Width="2" Height="14" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            </Grid>
+
+                            <Grid>
+                                <Border Margin="0,4" Background="WhiteSmoke" BorderBrush="{StaticResource RedBrush}" BorderThickness="4,0,0,0" CornerRadius="0,0,30,0" VerticalAlignment="Center">
+                                    <DockPanel Margin="8,4,4,6">
+                                        <TextBlock DockPanel.Dock="Left" Text="Stopped" Foreground="{StaticResource RedBrush}" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps"
+                                               VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Width="60"/>
+                                        <TextBlock Text="Reporting Engine Service" Margin="40,0,0,0" VerticalAlignment="Center" FontSize="12" Typography.Capitals="Normal" FontWeight="Normal"/>
+                                    </DockPanel>
+                                </Border>
+                                <Border Margin="0,4" Width="2" Height="14" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            </Grid>
                         </ItemsControl>
                     </ScrollViewer>
                 </DockPanel>
